# ProgrammingC_2_sibsutis

./: README.md
RGR/: CMakeLists.txt  README.md  functions.c  main.c  rgr.c  test_triangle.c  triangle.h
RGR/refined_version/: functions.c  main.c  triangle.h
lab1/: 1.c  1_1.c  README.MD  ЗАДАНИЕ
lab2/: 2.c  README.md
lab3/: README.md  qwerty.txt  sort.c  sort2.c  text2.txt  Практическое задание 3.docx
lab4/: 4.c  README.md
lab5/: 5.c  README.md
lab6/: CMakeLists.txt  README.md  ishod.c  main.c  main.h
lab7/: 1_1.c  1_2.c  1_3.c  1_4.c  1_5.c  1_6.c  7_1.c  7_2.c  7_3.c  7_4.c  7_5.c  7_6.c  7_7.c  7_8.c  7_9.c  README.md  grafic.py  laba7.md
lab8/: CMakeLists.txt  README.md  sort.c  sort.h  test_sorts.c
